Backend/F2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DIAGONAL
    LLAVEA
    LLAVEC
    ignore_COMENTARIOMULTILINEA
    ignore_COMENTARIOUNILINEA

Grammar

Rule 0     S' -> inicio
Rule 1     inicio -> instrucciones
Rule 2     fininstr -> PUNTOCOMA
Rule 3     instrucciones -> instrucciones instruccion
Rule 4     instrucciones -> instruccion
Rule 5     instruccion -> declaracion_var_instr fininstr
Rule 6     instruccion -> llamada_funcion_instr fininstr
Rule 7     instruccion -> modificacion_struct fininstr
Rule 8     instruccion -> modificar_arreglo fininstr
Rule 9     instruccion -> asignacion_instr fininstr
Rule 10    instruccion -> funciones_instr fininstr
Rule 11    instruccion -> continue_instr fininstr
Rule 12    instruccion -> imprimir_instr fininstr
Rule 13    instruccion -> structs_instr fininstr
Rule 14    instruccion -> return_instr fininstr
Rule 15    instruccion -> while_instr fininstr
Rule 16    instruccion -> break_instr fininstr
Rule 17    instruccion -> push_instr fininstr
Rule 18    instruccion -> for_instr fininstr
Rule 19    instruccion -> pop_instr fininstr
Rule 20    instruccion -> if_instr fininstr
Rule 21    instruccion -> error fininstr
Rule 22    expresion -> PARENTESISA expresion PARENTESISC
Rule 23    expresion -> CADENA
Rule 24    expresion -> CARACTER
Rule 25    expresion -> ENTERO
Rule 26    expresion -> MENOS ENTERO
Rule 27    expresion -> DOBLE
Rule 28    expresion -> MENOS DOBLE
Rule 29    expresion -> NOTHING
Rule 30    expresion -> ID
Rule 31    expresion -> bandera
Rule 32    expresion -> expresion MAS expresion
Rule 33    expresion -> expresion MENOS expresion
Rule 34    expresion -> expresion ASTERISCO expresion
Rule 35    expresion -> expresion DIVISION expresion
Rule 36    expresion -> expresion POTENCIA expresion
Rule 37    expresion -> expresion PORCENTAJE expresion
Rule 38    expresion -> expresion IGUALIGUAL expresion
Rule 39    expresion -> expresion DIFERENTE expresion
Rule 40    expresion -> expresion MENOR expresion
Rule 41    expresion -> expresion MAYOR expresion
Rule 42    expresion -> expresion MENORIGUAL expresion
Rule 43    expresion -> expresion MAYORIGUAL expresion
Rule 44    expresion -> expresion AND expresion
Rule 45    expresion -> expresion OR expresion
Rule 46    expresion -> NOT expresion
Rule 47    expresion -> llamada_funcion_instr
Rule 48    expresion -> CORCHETEA expresiones_coma CORCHETEC
Rule 49    expresion -> acceso_arreglo
Rule 50    expresion -> push_instr
Rule 51    expresion -> pop_instr
Rule 52    expresion -> acceso_struct
Rule 53    expresion -> PARSE PARENTESISA INT64 COMA expresion PARENTESISC
Rule 54    expresion -> PARSE PARENTESISA FLOAT64 COMA expresion PARENTESISC
Rule 55    expresion -> SSTRING PARENTESISA expresion PARENTESISC
Rule 56    pop_instr -> POP NOT PARENTESISA expresion PARENTESISC
Rule 57    push_instr -> PUSH NOT PARENTESISA expresion COMA expresion PARENTESISC
Rule 58    expresiones_coma -> expresiones_coma COMA expresion
Rule 59    expresiones_coma -> expresion
Rule 60    bandera -> TRUE
Rule 61    bandera -> FALSE
Rule 62    tipo -> INT64
Rule 63    tipo -> FLOAT64
Rule 64    tipo -> STRING
Rule 65    tipo -> CHAR
Rule 66    tipo -> BOOL
Rule 67    asignacion_instr -> ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
Rule 68    asignacion_instr -> ID IGUAL expresion
Rule 69    modificar_arreglo -> ID lista_dimensiones IGUAL expresion
Rule 70    acceso_arreglo -> ID lista_dimensiones
Rule 71    lista_dimensiones -> lista_dimensiones CORCHETEA expresion CORCHETEC
Rule 72    lista_dimensiones -> CORCHETEA expresion CORCHETEC
Rule 73    declaracion_var_instr -> LOCAL ID
Rule 74    declaracion_var_instr -> GLOBAL ID
Rule 75    declaracion_var_instr -> GLOBAL ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
Rule 76    declaracion_var_instr -> LOCAL ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
Rule 77    declaracion_var_instr -> GLOBAL ID IGUAL expresion
Rule 78    declaracion_var_instr -> LOCAL ID IGUAL expresion
Rule 79    imprimir_instr -> PRINT PARENTESISA PARENTESISC
Rule 80    imprimir_instr -> PRINTLN PARENTESISA PARENTESISC
Rule 81    imprimir_instr -> PRINT PARENTESISA expresiones_coma PARENTESISC
Rule 82    imprimir_instr -> PRINTLN PARENTESISA expresiones_coma PARENTESISC
Rule 83    funciones_instr -> FUNCTION ID PARENTESISA PARENTESISC instrucciones END
Rule 84    funciones_instr -> FUNCTION ID PARENTESISA parametros PARENTESISC instrucciones END
Rule 85    parametros -> parametros COMA parametro
Rule 86    parametros -> parametro
Rule 87    parametro -> ID DOSPUNTOS DOSPUNTOS tipo
Rule 88    parametro -> ID
Rule 89    llamada_funcion_instr -> ID PARENTESISA PARENTESISC
Rule 90    while_instr -> WHILE expresion instrucciones END
Rule 91    for_instr -> FOR ID IN expresion instrucciones END
Rule 92    for_instr -> FOR ID IN expresion DOSPUNTOS expresion instrucciones END
Rule 93    return_instr -> RETURN expresion
Rule 94    return_instr -> RETURN
Rule 95    break_instr -> BREAK
Rule 96    continue_instr -> CONTINUE
Rule 97    if_instr -> IF expresion instrucciones END
Rule 98    if_instr -> IF expresion instrucciones elseifs_instr ELSE instrucciones END
Rule 99    if_instr -> IF expresion instrucciones elseifs_instr END
Rule 100   if_instr -> IF expresion instrucciones ELSE instrucciones END
Rule 101   elseifs_instr -> elseifs_instr elseif_instr
Rule 102   elseifs_instr -> elseif_instr
Rule 103   elseif_instr -> ELSEIF expresion instrucciones
Rule 104   structs_instr -> structs_inmutable
Rule 105   structs_instr -> structs_mutable
Rule 106   structs_inmutable -> STRUCT ID lista_atributos END
Rule 107   structs_mutable -> MUTABLE STRUCT ID lista_atributos END
Rule 108   lista_atributos -> lista_atributos atributo fininstr
Rule 109   lista_atributos -> atributo fininstr
Rule 110   atributo -> ID DOSPUNTOS DOSPUNTOS tipo
Rule 111   atributo -> ID
Rule 112   acceso_struct -> ID PUNTO ID
Rule 113   modificacion_struct -> ID PUNTO ID IGUAL expresion

Terminals, with rules where they appear

AND                  : 44
ASTERISCO            : 34
BOOL                 : 66
BREAK                : 95
CADENA               : 23
CARACTER             : 24
CHAR                 : 65
COMA                 : 53 54 57 58 85
CONTINUE             : 96
CORCHETEA            : 48 71 72
CORCHETEC            : 48 71 72
DIAGONAL             : 
DIFERENTE            : 39
DIVISION             : 35
DOBLE                : 27 28
DOSPUNTOS            : 67 67 75 75 76 76 87 87 92 110 110
ELSE                 : 98 100
ELSEIF               : 103
END                  : 83 84 90 91 92 97 98 99 100 106 107
ENTERO               : 25 26
FALSE                : 61
FLOAT64              : 54 63
FOR                  : 91 92
FUNCTION             : 83 84
GLOBAL               : 74 75 77
ID                   : 30 67 68 69 70 73 74 75 76 77 78 83 84 87 88 89 91 92 106 107 110 111 112 112 113 113
IF                   : 97 98 99 100
IGUAL                : 67 68 69 75 76 77 78 113
IGUALIGUAL           : 38
IN                   : 91 92
INT64                : 53 62
LLAVEA               : 
LLAVEC               : 
LOCAL                : 73 76 78
MAS                  : 32
MAYOR                : 41
MAYORIGUAL           : 43
MENOR                : 40
MENORIGUAL           : 42
MENOS                : 26 28 33
MUTABLE              : 107
NOT                  : 46 56 57
NOTHING              : 29
OR                   : 45
PARENTESISA          : 22 53 54 55 56 57 79 80 81 82 83 84 89
PARENTESISC          : 22 53 54 55 56 57 79 80 81 82 83 84 89
PARSE                : 53 54
POP                  : 56
PORCENTAJE           : 37
POTENCIA             : 36
PRINT                : 79 81
PRINTLN              : 80 82
PUNTO                : 112 113
PUNTOCOMA            : 2
PUSH                 : 57
RETURN               : 93 94
SSTRING              : 55
STRING               : 64
STRUCT               : 106 107
TRUE                 : 60
WHILE                : 90
error                : 21
ignore_COMENTARIOMULTILINEA : 
ignore_COMENTARIOUNILINEA : 

Nonterminals, with rules where they appear

acceso_arreglo       : 49
acceso_struct        : 52
asignacion_instr     : 9
atributo             : 108 109
bandera              : 31
break_instr          : 16
continue_instr       : 11
declaracion_var_instr : 5
elseif_instr         : 101 102
elseifs_instr        : 98 99 101
expresion            : 22 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 53 54 55 56 57 57 58 59 67 68 69 71 72 75 76 77 78 90 91 92 92 93 97 98 99 100 103 113
expresiones_coma     : 48 58 81 82
fininstr             : 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 108 109
for_instr            : 18
funciones_instr      : 10
if_instr             : 20
imprimir_instr       : 12
inicio               : 0
instruccion          : 3 4
instrucciones        : 1 3 83 84 90 91 92 97 98 98 99 100 100 103
lista_atributos      : 106 107 108
lista_dimensiones    : 69 70 71
llamada_funcion_instr : 6 47
modificacion_struct  : 7
modificar_arreglo    : 8
parametro            : 85 86
parametros           : 84 85
pop_instr            : 19 51
push_instr           : 17 50
return_instr         : 14
structs_inmutable    : 104
structs_instr        : 13
structs_mutable      : 105
tipo                 : 67 75 76 87 110
while_instr          : 15

Parsing method: LALR

state 0

    (0) S' -> . inicio
    (1) inicio -> . instrucciones
    (3) instrucciones -> . instrucciones instruccion
    (4) instrucciones -> . instruccion
    (5) instruccion -> . declaracion_var_instr fininstr
    (6) instruccion -> . llamada_funcion_instr fininstr
    (7) instruccion -> . modificacion_struct fininstr
    (8) instruccion -> . modificar_arreglo fininstr
    (9) instruccion -> . asignacion_instr fininstr
    (10) instruccion -> . funciones_instr fininstr
    (11) instruccion -> . continue_instr fininstr
    (12) instruccion -> . imprimir_instr fininstr
    (13) instruccion -> . structs_instr fininstr
    (14) instruccion -> . return_instr fininstr
    (15) instruccion -> . while_instr fininstr
    (16) instruccion -> . break_instr fininstr
    (17) instruccion -> . push_instr fininstr
    (18) instruccion -> . for_instr fininstr
    (19) instruccion -> . pop_instr fininstr
    (20) instruccion -> . if_instr fininstr
    (21) instruccion -> . error fininstr
    (73) declaracion_var_instr -> . LOCAL ID
    (74) declaracion_var_instr -> . GLOBAL ID
    (75) declaracion_var_instr -> . GLOBAL ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
    (76) declaracion_var_instr -> . LOCAL ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
    (77) declaracion_var_instr -> . GLOBAL ID IGUAL expresion
    (78) declaracion_var_instr -> . LOCAL ID IGUAL expresion
    (89) llamada_funcion_instr -> . ID PARENTESISA PARENTESISC
    (113) modificacion_struct -> . ID PUNTO ID IGUAL expresion
    (69) modificar_arreglo -> . ID lista_dimensiones IGUAL expresion
    (67) asignacion_instr -> . ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
    (68) asignacion_instr -> . ID IGUAL expresion
    (83) funciones_instr -> . FUNCTION ID PARENTESISA PARENTESISC instrucciones END
    (84) funciones_instr -> . FUNCTION ID PARENTESISA parametros PARENTESISC instrucciones END
    (96) continue_instr -> . CONTINUE
    (79) imprimir_instr -> . PRINT PARENTESISA PARENTESISC
    (80) imprimir_instr -> . PRINTLN PARENTESISA PARENTESISC
    (81) imprimir_instr -> . PRINT PARENTESISA expresiones_coma PARENTESISC
    (82) imprimir_instr -> . PRINTLN PARENTESISA expresiones_coma PARENTESISC
    (104) structs_instr -> . structs_inmutable
    (105) structs_instr -> . structs_mutable
    (93) return_instr -> . RETURN expresion
    (94) return_instr -> . RETURN
    (90) while_instr -> . WHILE expresion instrucciones END
    (95) break_instr -> . BREAK
    (57) push_instr -> . PUSH NOT PARENTESISA expresion COMA expresion PARENTESISC
    (91) for_instr -> . FOR ID IN expresion instrucciones END
    (92) for_instr -> . FOR ID IN expresion DOSPUNTOS expresion instrucciones END
    (56) pop_instr -> . POP NOT PARENTESISA expresion PARENTESISC
    (97) if_instr -> . IF expresion instrucciones END
    (98) if_instr -> . IF expresion instrucciones elseifs_instr ELSE instrucciones END
    (99) if_instr -> . IF expresion instrucciones elseifs_instr END
    (100) if_instr -> . IF expresion instrucciones ELSE instrucciones END
    (106) structs_inmutable -> . STRUCT ID lista_atributos END
    (107) structs_mutable -> . MUTABLE STRUCT ID lista_atributos END

    error           shift and go to state 20
    LOCAL           shift and go to state 21
    GLOBAL          shift and go to state 23
    ID              shift and go to state 22
    FUNCTION        shift and go to state 24
    CONTINUE        shift and go to state 25
    PRINT           shift and go to state 26
    PRINTLN         shift and go to state 27
    RETURN          shift and go to state 30
    WHILE           shift and go to state 31
    BREAK           shift and go to state 32
    PUSH            shift and go to state 33
    FOR             shift and go to state 34
    POP             shift and go to state 35
    IF              shift and go to state 36
    STRUCT          shift and go to state 37
    MUTABLE         shift and go to state 38

    inicio                         shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    declaracion_var_instr          shift and go to state 4
    llamada_funcion_instr          shift and go to state 5
    modificacion_struct            shift and go to state 6
    modificar_arreglo              shift and go to state 7
    asignacion_instr               shift and go to state 8
    funciones_instr                shift and go to state 9
    continue_instr                 shift and go to state 10
    imprimir_instr                 shift and go to state 11
    structs_instr                  shift and go to state 12
    return_instr                   shift and go to state 13
    while_instr                    shift and go to state 14
    break_instr                    shift and go to state 15
    push_instr                     shift and go to state 16
    for_instr                      shift and go to state 17
    pop_instr                      shift and go to state 18
    if_instr                       shift and go to state 19
    structs_inmutable              shift and go to state 28
    structs_mutable                shift and go to state 29

state 1

    (0) S' -> inicio .



state 2

    (1) inicio -> instrucciones .
    (3) instrucciones -> instrucciones . instruccion
    (5) instruccion -> . declaracion_var_instr fininstr
    (6) instruccion -> . llamada_funcion_instr fininstr
    (7) instruccion -> . modificacion_struct fininstr
    (8) instruccion -> . modificar_arreglo fininstr
    (9) instruccion -> . asignacion_instr fininstr
    (10) instruccion -> . funciones_instr fininstr
    (11) instruccion -> . continue_instr fininstr
    (12) instruccion -> . imprimir_instr fininstr
    (13) instruccion -> . structs_instr fininstr
    (14) instruccion -> . return_instr fininstr
    (15) instruccion -> . while_instr fininstr
    (16) instruccion -> . break_instr fininstr
    (17) instruccion -> . push_instr fininstr
    (18) instruccion -> . for_instr fininstr
    (19) instruccion -> . pop_instr fininstr
    (20) instruccion -> . if_instr fininstr
    (21) instruccion -> . error fininstr
    (73) declaracion_var_instr -> . LOCAL ID
    (74) declaracion_var_instr -> . GLOBAL ID
    (75) declaracion_var_instr -> . GLOBAL ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
    (76) declaracion_var_instr -> . LOCAL ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
    (77) declaracion_var_instr -> . GLOBAL ID IGUAL expresion
    (78) declaracion_var_instr -> . LOCAL ID IGUAL expresion
    (89) llamada_funcion_instr -> . ID PARENTESISA PARENTESISC
    (113) modificacion_struct -> . ID PUNTO ID IGUAL expresion
    (69) modificar_arreglo -> . ID lista_dimensiones IGUAL expresion
    (67) asignacion_instr -> . ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
    (68) asignacion_instr -> . ID IGUAL expresion
    (83) funciones_instr -> . FUNCTION ID PARENTESISA PARENTESISC instrucciones END
    (84) funciones_instr -> . FUNCTION ID PARENTESISA parametros PARENTESISC instrucciones END
    (96) continue_instr -> . CONTINUE
    (79) imprimir_instr -> . PRINT PARENTESISA PARENTESISC
    (80) imprimir_instr -> . PRINTLN PARENTESISA PARENTESISC
    (81) imprimir_instr -> . PRINT PARENTESISA expresiones_coma PARENTESISC
    (82) imprimir_instr -> . PRINTLN PARENTESISA expresiones_coma PARENTESISC
    (104) structs_instr -> . structs_inmutable
    (105) structs_instr -> . structs_mutable
    (93) return_instr -> . RETURN expresion
    (94) return_instr -> . RETURN
    (90) while_instr -> . WHILE expresion instrucciones END
    (95) break_instr -> . BREAK
    (57) push_instr -> . PUSH NOT PARENTESISA expresion COMA expresion PARENTESISC
    (91) for_instr -> . FOR ID IN expresion instrucciones END
    (92) for_instr -> . FOR ID IN expresion DOSPUNTOS expresion instrucciones END
    (56) pop_instr -> . POP NOT PARENTESISA expresion PARENTESISC
    (97) if_instr -> . IF expresion instrucciones END
    (98) if_instr -> . IF expresion instrucciones elseifs_instr ELSE instrucciones END
    (99) if_instr -> . IF expresion instrucciones elseifs_instr END
    (100) if_instr -> . IF expresion instrucciones ELSE instrucciones END
    (106) structs_inmutable -> . STRUCT ID lista_atributos END
    (107) structs_mutable -> . MUTABLE STRUCT ID lista_atributos END

    $end            reduce using rule 1 (inicio -> instrucciones .)
    error           shift and go to state 20
    LOCAL           shift and go to state 21
    GLOBAL          shift and go to state 23
    ID              shift and go to state 22
    FUNCTION        shift and go to state 24
    CONTINUE        shift and go to state 25
    PRINT           shift and go to state 26
    PRINTLN         shift and go to state 27
    RETURN          shift and go to state 30
    WHILE           shift and go to state 31
    BREAK           shift and go to state 32
    PUSH            shift and go to state 33
    FOR             shift and go to state 34
    POP             shift and go to state 35
    IF              shift and go to state 36
    STRUCT          shift and go to state 37
    MUTABLE         shift and go to state 38

    instruccion                    shift and go to state 39
    declaracion_var_instr          shift and go to state 4
    llamada_funcion_instr          shift and go to state 5
    modificacion_struct            shift and go to state 6
    modificar_arreglo              shift and go to state 7
    asignacion_instr               shift and go to state 8
    funciones_instr                shift and go to state 9
    continue_instr                 shift and go to state 10
    imprimir_instr                 shift and go to state 11
    structs_instr                  shift and go to state 12
    return_instr                   shift and go to state 13
    while_instr                    shift and go to state 14
    break_instr                    shift and go to state 15
    push_instr                     shift and go to state 16
    for_instr                      shift and go to state 17
    pop_instr                      shift and go to state 18
    if_instr                       shift and go to state 19
    structs_inmutable              shift and go to state 28
    structs_mutable                shift and go to state 29

state 3

    (4) instrucciones -> instruccion .

    error           reduce using rule 4 (instrucciones -> instruccion .)
    LOCAL           reduce using rule 4 (instrucciones -> instruccion .)
    GLOBAL          reduce using rule 4 (instrucciones -> instruccion .)
    ID              reduce using rule 4 (instrucciones -> instruccion .)
    FUNCTION        reduce using rule 4 (instrucciones -> instruccion .)
    CONTINUE        reduce using rule 4 (instrucciones -> instruccion .)
    PRINT           reduce using rule 4 (instrucciones -> instruccion .)
    PRINTLN         reduce using rule 4 (instrucciones -> instruccion .)
    RETURN          reduce using rule 4 (instrucciones -> instruccion .)
    WHILE           reduce using rule 4 (instrucciones -> instruccion .)
    BREAK           reduce using rule 4 (instrucciones -> instruccion .)
    PUSH            reduce using rule 4 (instrucciones -> instruccion .)
    FOR             reduce using rule 4 (instrucciones -> instruccion .)
    POP             reduce using rule 4 (instrucciones -> instruccion .)
    IF              reduce using rule 4 (instrucciones -> instruccion .)
    STRUCT          reduce using rule 4 (instrucciones -> instruccion .)
    MUTABLE         reduce using rule 4 (instrucciones -> instruccion .)
    $end            reduce using rule 4 (instrucciones -> instruccion .)
    END             reduce using rule 4 (instrucciones -> instruccion .)
    ELSE            reduce using rule 4 (instrucciones -> instruccion .)
    ELSEIF          reduce using rule 4 (instrucciones -> instruccion .)


state 4

    (5) instruccion -> declaracion_var_instr . fininstr
    (2) fininstr -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 41

    fininstr                       shift and go to state 40

state 5

    (6) instruccion -> llamada_funcion_instr . fininstr
    (2) fininstr -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 41

    fininstr                       shift and go to state 42

state 6

    (7) instruccion -> modificacion_struct . fininstr
    (2) fininstr -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 41

    fininstr                       shift and go to state 43

state 7

    (8) instruccion -> modificar_arreglo . fininstr
    (2) fininstr -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 41

    fininstr                       shift and go to state 44

state 8

    (9) instruccion -> asignacion_instr . fininstr
    (2) fininstr -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 41

    fininstr                       shift and go to state 45

state 9

    (10) instruccion -> funciones_instr . fininstr
    (2) fininstr -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 41

    fininstr                       shift and go to state 46

state 10

    (11) instruccion -> continue_instr . fininstr
    (2) fininstr -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 41

    fininstr                       shift and go to state 47

state 11

    (12) instruccion -> imprimir_instr . fininstr
    (2) fininstr -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 41

    fininstr                       shift and go to state 48

state 12

    (13) instruccion -> structs_instr . fininstr
    (2) fininstr -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 41

    fininstr                       shift and go to state 49

state 13

    (14) instruccion -> return_instr . fininstr
    (2) fininstr -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 41

    fininstr                       shift and go to state 50

state 14

    (15) instruccion -> while_instr . fininstr
    (2) fininstr -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 41

    fininstr                       shift and go to state 51

state 15

    (16) instruccion -> break_instr . fininstr
    (2) fininstr -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 41

    fininstr                       shift and go to state 52

state 16

    (17) instruccion -> push_instr . fininstr
    (2) fininstr -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 41

    fininstr                       shift and go to state 53

state 17

    (18) instruccion -> for_instr . fininstr
    (2) fininstr -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 41

    fininstr                       shift and go to state 54

state 18

    (19) instruccion -> pop_instr . fininstr
    (2) fininstr -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 41

    fininstr                       shift and go to state 55

state 19

    (20) instruccion -> if_instr . fininstr
    (2) fininstr -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 41

    fininstr                       shift and go to state 56

state 20

    (21) instruccion -> error . fininstr
    (2) fininstr -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 41

    fininstr                       shift and go to state 57

state 21

    (73) declaracion_var_instr -> LOCAL . ID
    (76) declaracion_var_instr -> LOCAL . ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
    (78) declaracion_var_instr -> LOCAL . ID IGUAL expresion

    ID              shift and go to state 58


state 22

    (89) llamada_funcion_instr -> ID . PARENTESISA PARENTESISC
    (113) modificacion_struct -> ID . PUNTO ID IGUAL expresion
    (69) modificar_arreglo -> ID . lista_dimensiones IGUAL expresion
    (67) asignacion_instr -> ID . IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
    (68) asignacion_instr -> ID . IGUAL expresion
    (71) lista_dimensiones -> . lista_dimensiones CORCHETEA expresion CORCHETEC
    (72) lista_dimensiones -> . CORCHETEA expresion CORCHETEC

    PARENTESISA     shift and go to state 59
    PUNTO           shift and go to state 60
    IGUAL           shift and go to state 61
    CORCHETEA       shift and go to state 63

    lista_dimensiones              shift and go to state 62

state 23

    (74) declaracion_var_instr -> GLOBAL . ID
    (75) declaracion_var_instr -> GLOBAL . ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
    (77) declaracion_var_instr -> GLOBAL . ID IGUAL expresion

    ID              shift and go to state 64


state 24

    (83) funciones_instr -> FUNCTION . ID PARENTESISA PARENTESISC instrucciones END
    (84) funciones_instr -> FUNCTION . ID PARENTESISA parametros PARENTESISC instrucciones END

    ID              shift and go to state 65


state 25

    (96) continue_instr -> CONTINUE .

    PUNTOCOMA       reduce using rule 96 (continue_instr -> CONTINUE .)


state 26

    (79) imprimir_instr -> PRINT . PARENTESISA PARENTESISC
    (81) imprimir_instr -> PRINT . PARENTESISA expresiones_coma PARENTESISC

    PARENTESISA     shift and go to state 66


state 27

    (80) imprimir_instr -> PRINTLN . PARENTESISA PARENTESISC
    (82) imprimir_instr -> PRINTLN . PARENTESISA expresiones_coma PARENTESISC

    PARENTESISA     shift and go to state 67


state 28

    (104) structs_instr -> structs_inmutable .

    PUNTOCOMA       reduce using rule 104 (structs_instr -> structs_inmutable .)


state 29

    (105) structs_instr -> structs_mutable .

    PUNTOCOMA       reduce using rule 105 (structs_instr -> structs_mutable .)


state 30

    (93) return_instr -> RETURN . expresion
    (94) return_instr -> RETURN .
    (22) expresion -> . PARENTESISA expresion PARENTESISC
    (23) expresion -> . CADENA
    (24) expresion -> . CARACTER
    (25) expresion -> . ENTERO
    (26) expresion -> . MENOS ENTERO
    (27) expresion -> . DOBLE
    (28) expresion -> . MENOS DOBLE
    (29) expresion -> . NOTHING
    (30) expresion -> . ID
    (31) expresion -> . bandera
    (32) expresion -> . expresion MAS expresion
    (33) expresion -> . expresion MENOS expresion
    (34) expresion -> . expresion ASTERISCO expresion
    (35) expresion -> . expresion DIVISION expresion
    (36) expresion -> . expresion POTENCIA expresion
    (37) expresion -> . expresion PORCENTAJE expresion
    (38) expresion -> . expresion IGUALIGUAL expresion
    (39) expresion -> . expresion DIFERENTE expresion
    (40) expresion -> . expresion MENOR expresion
    (41) expresion -> . expresion MAYOR expresion
    (42) expresion -> . expresion MENORIGUAL expresion
    (43) expresion -> . expresion MAYORIGUAL expresion
    (44) expresion -> . expresion AND expresion
    (45) expresion -> . expresion OR expresion
    (46) expresion -> . NOT expresion
    (47) expresion -> . llamada_funcion_instr
    (48) expresion -> . CORCHETEA expresiones_coma CORCHETEC
    (49) expresion -> . acceso_arreglo
    (50) expresion -> . push_instr
    (51) expresion -> . pop_instr
    (52) expresion -> . acceso_struct
    (53) expresion -> . PARSE PARENTESISA INT64 COMA expresion PARENTESISC
    (54) expresion -> . PARSE PARENTESISA FLOAT64 COMA expresion PARENTESISC
    (55) expresion -> . SSTRING PARENTESISA expresion PARENTESISC
    (60) bandera -> . TRUE
    (61) bandera -> . FALSE
    (89) llamada_funcion_instr -> . ID PARENTESISA PARENTESISC
    (70) acceso_arreglo -> . ID lista_dimensiones
    (57) push_instr -> . PUSH NOT PARENTESISA expresion COMA expresion PARENTESISC
    (56) pop_instr -> . POP NOT PARENTESISA expresion PARENTESISC
    (112) acceso_struct -> . ID PUNTO ID

    PUNTOCOMA       reduce using rule 94 (return_instr -> RETURN .)
    PARENTESISA     shift and go to state 69
    CADENA          shift and go to state 70
    CARACTER        shift and go to state 71
    ENTERO          shift and go to state 72
    MENOS           shift and go to state 73
    DOBLE           shift and go to state 74
    NOTHING         shift and go to state 75
    ID              shift and go to state 76
    NOT             shift and go to state 78
    CORCHETEA       shift and go to state 80
    PARSE           shift and go to state 85
    SSTRING         shift and go to state 86
    TRUE            shift and go to state 87
    FALSE           shift and go to state 88
    PUSH            shift and go to state 33
    POP             shift and go to state 35

    expresion                      shift and go to state 68
    bandera                        shift and go to state 77
    llamada_funcion_instr          shift and go to state 79
    acceso_arreglo                 shift and go to state 81
    push_instr                     shift and go to state 82
    pop_instr                      shift and go to state 83
    acceso_struct                  shift and go to state 84

state 31

    (90) while_instr -> WHILE . expresion instrucciones END
    (22) expresion -> . PARENTESISA expresion PARENTESISC
    (23) expresion -> . CADENA
    (24) expresion -> . CARACTER
    (25) expresion -> . ENTERO
    (26) expresion -> . MENOS ENTERO
    (27) expresion -> . DOBLE
    (28) expresion -> . MENOS DOBLE
    (29) expresion -> . NOTHING
    (30) expresion -> . ID
    (31) expresion -> . bandera
    (32) expresion -> . expresion MAS expresion
    (33) expresion -> . expresion MENOS expresion
    (34) expresion -> . expresion ASTERISCO expresion
    (35) expresion -> . expresion DIVISION expresion
    (36) expresion -> . expresion POTENCIA expresion
    (37) expresion -> . expresion PORCENTAJE expresion
    (38) expresion -> . expresion IGUALIGUAL expresion
    (39) expresion -> . expresion DIFERENTE expresion
    (40) expresion -> . expresion MENOR expresion
    (41) expresion -> . expresion MAYOR expresion
    (42) expresion -> . expresion MENORIGUAL expresion
    (43) expresion -> . expresion MAYORIGUAL expresion
    (44) expresion -> . expresion AND expresion
    (45) expresion -> . expresion OR expresion
    (46) expresion -> . NOT expresion
    (47) expresion -> . llamada_funcion_instr
    (48) expresion -> . CORCHETEA expresiones_coma CORCHETEC
    (49) expresion -> . acceso_arreglo
    (50) expresion -> . push_instr
    (51) expresion -> . pop_instr
    (52) expresion -> . acceso_struct
    (53) expresion -> . PARSE PARENTESISA INT64 COMA expresion PARENTESISC
    (54) expresion -> . PARSE PARENTESISA FLOAT64 COMA expresion PARENTESISC
    (55) expresion -> . SSTRING PARENTESISA expresion PARENTESISC
    (60) bandera -> . TRUE
    (61) bandera -> . FALSE
    (89) llamada_funcion_instr -> . ID PARENTESISA PARENTESISC
    (70) acceso_arreglo -> . ID lista_dimensiones
    (57) push_instr -> . PUSH NOT PARENTESISA expresion COMA expresion PARENTESISC
    (56) pop_instr -> . POP NOT PARENTESISA expresion PARENTESISC
    (112) acceso_struct -> . ID PUNTO ID

    PARENTESISA     shift and go to state 69
    CADENA          shift and go to state 70
    CARACTER        shift and go to state 71
    ENTERO          shift and go to state 72
    MENOS           shift and go to state 73
    DOBLE           shift and go to state 74
    NOTHING         shift and go to state 75
    ID              shift and go to state 76
    NOT             shift and go to state 78
    CORCHETEA       shift and go to state 80
    PARSE           shift and go to state 85
    SSTRING         shift and go to state 86
    TRUE            shift and go to state 87
    FALSE           shift and go to state 88
    PUSH            shift and go to state 33
    POP             shift and go to state 35

    expresion                      shift and go to state 89
    bandera                        shift and go to state 77
    llamada_funcion_instr          shift and go to state 79
    acceso_arreglo                 shift and go to state 81
    push_instr                     shift and go to state 82
    pop_instr                      shift and go to state 83
    acceso_struct                  shift and go to state 84

state 32

    (95) break_instr -> BREAK .

    PUNTOCOMA       reduce using rule 95 (break_instr -> BREAK .)


state 33

    (57) push_instr -> PUSH . NOT PARENTESISA expresion COMA expresion PARENTESISC

    NOT             shift and go to state 90


state 34
